# rust_study

./: .gitignore  Cargo.toml  README.md
actix-web/: Cargo.toml
actix-web/src/: main.rs
axum/: Cargo.toml
axum/src/: main.rs
old/: Cargo.toml  wrapper.h
old/src/: error_test.rs  main.rs  main_2.rs  random.rs  user.rs
redis-rs/: Cargo.toml
redis-rs/src/: main.rs
rust2_1/: Cargo.toml
rust2_1/src/: main.rs
rust2_2_1/: Cargo.toml
rust2_2_1/src/: main.rs
rust2_2_2/: Cargo.toml
rust2_2_2/src/: main.rs
rust2_2_3/: Cargo.toml
rust2_2_3/src/: main.rs
rust2_2_4/: Cargo.toml
rust2_2_4/src/: main.rs
rust2_3_1/: Cargo.toml
rust2_3_1/src/: main  main.c  main.rs
rust2_3_2/: Cargo.toml
rust2_3_2/src/: main.rs
rust2_4_1/: Cargo.toml
rust2_4_1/src/: main.rs
rust2_4_2/: Cargo.toml
rust2_4_2/src/: main.rs
rust2_4_3/: Cargo.toml
rust2_4_3/src/: main.rs
rust2_4_4/: Cargo.toml
rust2_4_4/src/: main.rs
rust2_4_5/: Cargo.toml
rust2_4_5/src/: main.rs
rust2_5/: Cargo.toml
rust2_5/src/: main.rs
src/: lib.rs  main.rs  main_0.rs  main_00.rs  main_3.rs  redis_local.rs
world_new/: Cargo.toml
