[package]
name = "rust_study"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.4"
anyhow = "1.0"
redis = { version = "0.22.1", features = [ "cluster"] }
redis-cluster = "0.1.4"
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1", features = ["full"] }
#md5 = "0.7.0"
rust-crypto = "0.2.36"
num = "0.4.0"
time = "0.3.17"
hex = "0.4.3"
lazy_static = "1.4.0"
#rust-crypto = { version = "0.2.36", features = []}
#num = { version ="0.4.0", features=["bigint"] }