[package]
name = "redis-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lazy_static = "1.4.0"

[dependencies.redis]
version = "0.23.2"
features = ["cluster"]

[dependencies.tokio]
version = "1.25.0"
features = [
    "rt-multi-thread",
    "macros",
    "sync",
    "time",
    "net",
]